--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "Click-It",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://github.com/scottasawyer/Click-It",
+  "homepage": "https://scottasawyer.github.io/Click-It",
   "dependencies": {
     "react": "^16.6.0",
     "react-dom": "^16.6.0",
